--- a/src/main/resources/static/css/style3.css
+++ b/src/main/resources/static/css/style3.css
@@ -4,9 +4,19 @@ body {
   font-family: Arial, sans-serif;
 }
 
-h2 {
+h3 {
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
+  margin-top:15px;
+  color: rgb(185, 207, 188);
+  font-size:35px;
+}
+
+p{
+	text-align: center;
+	font-size:20px;
+	color: rgb(185, 207, 188);
+	margin-bottom:0px;	
 }
 
 form {
@@ -15,6 +25,7 @@ form {
   padding: 20px;
   border: 1px solid #ddd;
   border-radius: 10px;
+  text-align: center;
 }
 
 input[type="password"],
@@ -32,15 +43,15 @@ select {
 input[type="submit"] {
   width: 100%;
   padding: 10px;
-  background-color: purple;
-  color: white;
+  background-color: #2e4d2e;
+  color: rgb(185, 207, 188);
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 
 input[type="submit"]:hover {
-  background-color: blue;
+  background-color: #4d6945;
 }
 
 .productPictures {
@@ -58,3 +69,20 @@ input[type="submit"]:hover {
   border: 1px solid #ddd;
   border-radius: 5px;
 }
+
+.author-photo-box2 {
+    text-align: center;
+    margin: 0 auto 0 auto;
+}
+
+.author2 {
+    max-width: 120px;
+    height: auto;
+}
+
+.link{
+	  color: rgb(185, 207, 188);
+	  text-decoration:none;
+	
+}
+
