--- a/src/main/resources/static/css/style4.css
+++ b/src/main/resources/static/css/style4.css
@@ -243,193 +243,13 @@ h2 {
 	
 }
 
-/*----Main Blog section------------------------------------------------------------*/
-.product-container {
-	display: flex;
-	flex-direction: column;
-	width: 80%;
+.author-photo-box {
+    text-align: center;
+    margin: 200px auto 0 auto;
+    border: 2px solid white;
 }
 
-.side-menu-container {
-	padding:10px;
-	width: 22%;
-	height:fit-content;
-	display: flex;
-	flex-direction: column;
-	margin-top:95px;
-	border: 2px solid black;
-	box-shadow: 2px 2px 8px rgb(0, 0, 0);
-}
-
-.product-image-container {
-	width: 90%;
-	height: auto;
-	border: 2px solid black;
-	background-color: rgb(244, 239, 239);
-	box-shadow: 2px 2px 8px rgb(0, 0, 0);
-}
-
-.main-photo {
-	width: 90%;
-	padding: 30px;
-	margin-top:0px;
-	padding-top:17px;
-}
-
-.details {
-	font-weight:500;
-	font-size: 20px;
-	padding:10px;
-}
-
-.title2 {
-	text-align:left;
-	margin-left:0px;
-	margin-bottom: 0px;
-	padding-bottom: 0px;
-	font-size: 30px;
-}
-
-.category-text {
-	margin-top: 0px;
-	padding-top: 0px;
-	margin-right:100px;
-}
-
-.rating {
-	font-weight: bold;
-	font-size: 17px;
-	padding-top:8px;
-	padding-left:30px;
-	padding-bottom:0px;
-	margin-bottom:0px;
-	margin-top:0px;
-}
-
-.details-container{
-	margin-top:5px;
-	width: 90%;
-	height: auto;
-	border: 2px solid black;
-	background-color: rgb(244, 239, 239);
-	box-shadow: 2px 2px 8px rgb(0, 0, 0);
-}
-
-.description-container{
-	margin-top:15px;
-	width: 90%;
-	height: auto;
-	border: 2px solid black;
-	background-color: rgb(244, 239, 239);
-	box-shadow: 2px 2px 8px rgb(0, 0, 0);
-}
-
-.description{
-	
-	padding:20px;
-}
-
-.other-text{
-	font-weight: bold;
-	font-size: 19px;
-	padding: 7px;
-}
-
-.price2{
-	text-align:center;
-    color: #8a1e8a;
-	font-weight: bold;
-	font-size: 40px;
-	
-}
-
-.recomends{
-	margin-top:5px;
-	color: #c477c4;
-	font-weight:500;
-	font-size: 15px;
-	padding:10px;
-	padding-top:0px;
-}
-
-.owner{
-	box-shadow: 2px 2px 8px rgb(0, 0, 0);
-	margin-bottom:0px;
-	font-weight:bold;
-	font-size: 20px;
-	padding:10px;
-	border: 2px solid black;
-	 text-align: center;
-	 
-}
-
-.ask-button{
-	background-color: purple;
-	color: white;
-	font-size: 15px;
-	padding: 8px;
-	width:120px;
-	height:50px;
-	margin:3px;
-	box-shadow: 2px 2px 5px rgb(0, 0, 0);
-}
-
-.container{
-	display:flex;	
-	justify-content: space-between;
-	align-items: center;
-	margin-bottom:0px;
-	padding-bottom:0px;
-	
-}
-
-.input {
-	font-size: 15px;
-	padding: 8px;
-	width:100px;
-	height:40px;
-	margin:3px;
-	
-}
-
-.ask-button2{
-	background-color: purple;
-	color: white;
-	font-size: 15px;
-	padding: 8px;
-	width:100%;
-	height:50px;
-	margin:3px;
-	box-shadow: 2px 2px 8px rgb(0, 0, 0);
-}
-
-.home{
-	
-	text-align:center;
-}
-
-.desc {
-	padding-top:0px;
-	margin-top:0px;
-	margin-bottom: 0px;
-	padding: 10px;
-	font-size: 30px;
-}
-
-.details-container2{
-
-  display: flex;
-  
-}
-	
-.another-container{
-	display: inline;
-	flex-direction: column;
-	width: 30%;
-}
-
-.description{
-	font-weight:500;
-	font-size: 20px;
-	padding:15px;
+.author {
+    max-width: 20vh;
+    height: auto;
 }
