add new funcionality show liekd psots and posted

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -471,6 +471,17 @@ a {
 	font-size:15px;
 	color:white;
 }
+
+.blog-container-list {
+	display: flex;
+	flex-direction: column;
+	width: 70%;
+	color: #c477c4;
+	font-weight: 500;
+	margin: 0 auto;
+	text-align:center;
+	
+}
 	
 	
 	
