--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -306,6 +306,7 @@ body {
 	background-size: cover;
 	background-position: top;
 	opacity: 0.7;
+	
 }
 
 .popular-container {
@@ -483,6 +484,9 @@ a {
 	
 }
 	
-	
+img{
+	max-width:100%;
+	max-height:100%;
+}
 	
 
